samples/_failures_safe/1761666416_6f1bea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa4c6e95.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_aa4c6e95.c:155:24: error: expected ‘;’ at end of input
  155 |             printed = 1
      |                        ^
      |                        ;
./samples/SAFE/__tmp_aa4c6e95.c:155:13: error: expected declaration or statement at end of input
  155 |             printed = 1
      |             ^~~~~~~
./samples/SAFE/__tmp_aa4c6e95.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa4c6e95.c:155:13: error: expected declaration or statement at end of input
